# SentimentTinker

./: .gitignore  README.md  env.yaml  lstm.ipynb  pyproject.toml  requirements.txt
app/: app.py
app/templates/: index.html  result.html
data/: prep_data.ipynb  prepdata.py
logs/train/: events.out.tfevents.1685806784.VC-SMS-0031.32267.0.v2
logs/validation/: events.out.tfevents.1685806784.VC-SMS-0031.32267.1.v2
tests/: test_gpu_avail.py  test_lstm_bayes.py  test_prepdata.py
train/: best_hyperparameters.json  lstm.ipynb  lstm_bayes.py  sentiment_analysis_history.pkl  train.slurm
