[tool.poetry]
name = "sentimenttinker"
version = "0.1.0"
description = "Just me tinkering with some NLP for sentiment analysis"
authors = ["Mazen Ali <mazen.ali@itwm.fraunhofer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.23.1"
tensorflow = "^2.12.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
keras-tuner = "^1.3.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
