[tool.poetry]
name = "sentimenttinker"
version = "0.1.0"
description = "Just me tinkering with some NLP for sentiment analysis"
authors = ["Mazen Ali <mazen.ali@itwm.fraunhofer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
tensorflow = "2.2.0"
python = "3.8.5"
ipykernel = "5.3.4"
pydot = "1.4.2"
matplotlib = "3.3.1"
pandas = "1.1.1"
scikit-learn = "0.23.2"
keras-tuner = "1.3.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
